--- a/join.html
+++ b/join.html
@@ -44,32 +44,32 @@
   <p> <span class= "meet"> Meet the Students      </span> </p>
 
   <div class="students">
-    <img src="boy1.jpg" alt="A picture of Rey"/>
+    <img src="pictures/boy1.jpg" alt="A picture of Rey"/>
 
     <p class="caption">Rey is a key contributor.</p>
   </div>
 
   <div class="Students">
-    <img src="boy2.jpg" alt="A picture of Rob"/>
+    <img src="pictures/boy2.jpg" alt="A picture of Rob"/>
 
     <p class="caption">Rob is a key contributor.</p>
   </div>
 
   <div class="Students">
-    <img src="boy3.jpg" alt="A picture of Jake"/>
+    <img src="pictures/boy3.jpg" alt="A picture of Jake"/>
 
     <p class="caption">Jake is a key contributor.</p>
   </div>
 
 
   <div class="Students">
-    <img src="girl1.jpg" alt="A picture of Julia"/>
+    <img src="pictures/girl1.jpg" alt="A picture of Julia"/>
 
     <p class="caption">Julia is a key contributor.</p>
   </div>
 
   <div class="Students">
-    <img src="girl3.jpg" alt="A picture of Olivia"/>
+    <img src="pictures/girl3.jpg" alt="A picture of Olivia"/>
 
     <p class="caption">Olivia is a key contributor.</p>
   </div>
