--- a/rainbow.html
+++ b/rainbow.html
@@ -43,26 +43,26 @@
     <p> Below are photos of the events. More Filler text. kjflsjfos didjfsojf </p>
 
   <div class="Rainbow">
-    <img src="Kidsplaying1.jpg" alt="Rainbow house kids"/>
+    <img src="pictures/Kidsplaying1.jpg" alt="Rainbow house kids"/>
 
     <p class="caption">Rainbow House kids.</p>
   </div>
 
   <div class="Rainbow">
-    <img src="Volunteering.jpg" alt="People volunteering"/>
+    <img src="pictures/Volunteering.jpg" alt="People volunteering"/>
 
     <p class="caption">People volunteering.</p>
   </div>
 
 
   <div class="Rainbow">
-    <img src="kids2.png" alt="More kids"/>
+    <img src="pictures/kids2.png" alt="More kids"/>
 
     <p class="caption">Kids at Rainbow House.</p>
   </div>
 
   <div class="Rainbow">
-    <img src="Reading.jpg" alt="Reading"/>
+    <img src="pictures/Reading.jpg" alt="Reading"/>
 
     <p class="caption">Reading to kids.</p>
   </div>
