--- a/spirit76.html
+++ b/spirit76.html
@@ -49,26 +49,26 @@
     skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. </p>
 
 <div class="fireworks">
-  <img src="fireworks1.jpeg" alt="People looking at Fireworks"/>
+  <img src="pictures/fireworks1.jpeg" alt="People looking at Fireworks"/>
 
   <p class="caption">People looking at Fireworks.</p>
 </div>
 
 <div class="fireworks">
-  <img src="Fireworks2.jpg" alt="More Fireworks"/>
+  <img src="pictures/Fireworks2.jpg" alt="More Fireworks"/>
 
   <p class="caption">More Fireworks.</p>
 </div>
 
 
 <div class="fireworks">
-  <img src="Fireworks3.jpg" alt="Big Fireworks"/>
+  <img src="pictures/Fireworks3.jpg" alt="Big Fireworks"/>
 
   <p class="caption">Big Fireworks.</p>
 </div>
 
 <div class="fireworks">
-  <img src="Fireworks4.png" alt="Green firework"/>
+  <img src="pictures/Fireworks4.png" alt="Green firework"/>
 
   <p class="caption">Green Fireworks.</p>
 </div>
