--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,15 @@
     blah blah...enter your name in below and we'll get back to you. </p>
 
 
-<p> <div class= "contact"> alwyt7@mail.missouri.edu </div> </p>
+<p> <div class= "contact"> forrestmd@missouri.edu </div> </p>
 <p> <div class= "contact"> 847-826-3045 </div> </p>
 <p> <div class= "contact"> @alyssaweisberg5 </div> </p>
 
 
 </body>
 
-
+<footer>
+    <p> forrestmd@missouri.edu </p>
+</footer>
 
 </html>
