--- a/home.html
+++ b/home.html
@@ -38,23 +38,20 @@
   <p> <span class= "bold"> Services </span> </p>
     <p> There are four categories for every project. We do production (budget, AE, management), client services,
       strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
-      entertainment (vendors, catering, music, games, auction).
+      entertainment (vendors, catering, music, games, auction).  There are four categories for every project. We do production (budget, AE, management), client services,
+        strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
+        entertainment (vendors, catering, music, games, auction). There are four categories for every project. We do production (budget, AE, management), client services,
+          strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
+          entertainment (vendors, catering, music, games, auction). There are four categories for every project. We do production (budget, AE, management), client services,
+            strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
+            entertainment (vendors, catering, music, games, auction).
     </p>
   </div>
 </body>
 
-
-
-
-
-
-
-
-
-
-
-
-
+<footer>
+    <p> forrestmd@missouri.edu </p>
+</footer>
 
 
 </html>
