--- a/spirit76.html
+++ b/spirit76.html
@@ -75,6 +75,7 @@
 
 <footer>
     <p> forrestmd@missouri.edu </p>
+    <p>Content copyright &copy; 2018, PRI-MO Events Agency</p>
 </footer>
 
 </html>
