--- a/rainbow.html
+++ b/rainbow.html
@@ -32,8 +32,8 @@
 
   <h3>Rainbow House</h3>
 
-  <p> This is what we did for the Rainbow House. More Filler text. kjflsjfos didjfsojf skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. asjkdosj fisfsij fskl.
-  kljlkjf osijf soijf afjsdkaf. fasj ieww fajfie fsjfow. ajfiewf. esajio few</p>
+  <p> This is what we did for the Rainbow House. More Filler text. This is what we did for the Rainbow House. More Filler text. This is what we did for the Rainbow House. More Filler text. This is what we did for the Rainbow House. More Filler text. This is what we did for the Rainbow House. More Filler text. This is what we did for the Rainbow House. More Filler text.
+  This is what we did for the Rainbow House. More Filler text.This is what we did for the Rainbow House. More Filler text. This is what we did for the Rainbow House. More Filler text. </p>
 
     <div class="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/OEC9wS6EhLc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
