--- a/spirit76.html
+++ b/spirit76.html
@@ -36,9 +36,8 @@
 
   <h3>Spirit of 76 Fireworks</h3>
 
-  <p> This is what did for the Spirit of 76 Fireworks. More Filler text. kjflsjfos didjfsojf
-    skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. asjkdosj fisfsij fskl.
-    kljlkjf osijf soijf afjsdkaf. fasj ieww fajfie fsjfow. ajfiewf. esajio few</p>
+  <p> This is what did for the Spirit of 76 Fireworks. More Filler text. This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.
+  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text. </p>
 
   <div class="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ICpXwYMZRo0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
