first rainbow house flex attempt

--- a/rainbow.html
+++ b/rainbow.html
@@ -32,17 +32,22 @@
 
   <h3>Rainbow House</h3>
 
+  <div id="rainbow-container">
+  <div class="intro">
   <p> This is what we did for the Rainbow House. More Filler text. kjflsjfos didjfsojf skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. asjkdosj fisfsij fskl.
   kljlkjf osijf soijf afjsdkaf. fasj ieww fajfie fsjfow. ajfiewf. esajio few</p>
+</div>
 
-    <div class="video">
+    <div class="video1">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/OEC9wS6EhLc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
     </iframe>
     </div>
 
-    <p> Below are photos of the events. More Filler text. kjflsjfos didjfsojf </p>
+<div class="below">
+<p> Below are photos of the events. More Filler text. kjflsjfos didjfsojf </p>
+</div> 
 
-  <div class="Rainbow">
+  <div class="rainbow1">
     <img src="pictures/Kidsplaying1.jpg" alt="Rainbow house kids"/>
 
     <p class="caption">Rainbow House kids.</p>
@@ -66,6 +71,8 @@
 
     <p class="caption">Reading to kids.</p>
   </div>
+
+</div>
 
   </body>
 
