VERY rough flex on the "our work" section

--- a/spirit76.html
+++ b/spirit76.html
@@ -36,41 +36,49 @@
 
   <h3>Spirit of 76 Fireworks</h3>
 
+  <div id="work-container">
+  <div class="intro">
   <p> This is what did for the Spirit of 76 Fireworks. More Filler text. This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.
-  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text. </p>
 
-  <div class="video">
+  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text. </p>
+  </div>
+
+  <div class="video1">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ICpXwYMZRo0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
     </iframe>
   </div>
 
+<div class="below">
   <p> Below are photos of our events... More Filler text. kjflsjfos didjfsojf
     skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. </p>
+</div>
 
-<div class="fireworks">
+<div class="photo1">
   <img src="pictures/fireworks1.jpeg" alt="People looking at Fireworks"/>
 
-  <p class="caption">People looking at Fireworks.</p>
+  <p class="caption1">People looking at Fireworks.</p>
 </div>
 
-<div class="fireworks">
+<div class="photo2">
   <img src="pictures/Fireworks2.jpg" alt="More Fireworks"/>
 
-  <p class="caption">More Fireworks.</p>
+  <p class="caption2">More Fireworks.</p>
 </div>
 
 
-<div class="fireworks">
+<div class="photo3">
   <img src="pictures/Fireworks3.jpg" alt="Big Fireworks"/>
 
-  <p class="caption">Big Fireworks.</p>
+  <p class="caption3">Big Fireworks.</p>
 </div>
 
-<div class="fireworks">
+<div class="photo4">
   <img src="pictures/Fireworks4.png" alt="Green firework"/>
 
-  <p class="caption">Green Fireworks.</p>
+  <p class="caption4">Green Fireworks.</p>
 </div>
+</div>
+</body>
 
 <footer>
     <p> forrestmd@missouri.edu </p>
