--- a/rainbow.html
+++ b/rainbow.html
@@ -32,7 +32,7 @@
 
   <h3>Rainbow House</h3>
 
-  <div id="rainbow-container">
+  <div id="work-container">
   <div class="intro">
   <p> This is what we did for the Rainbow House. More Filler text. kjflsjfos didjfsojf skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. asjkdosj fisfsij fskl.
   kljlkjf osijf soijf afjsdkaf. fasj ieww fajfie fsjfow. ajfiewf. esajio few</p>
@@ -47,29 +47,29 @@
 <p> Below are photos of the events. More Filler text. kjflsjfos didjfsojf </p>
 </div>
 
-  <div class="rainbow1">
+  <div class="photo1">
     <img src="pictures/Kidsplaying1.jpg" alt="Rainbow house kids"/>
 
-    <p class="caption">Rainbow House kids.</p>
+    <p class="caption1">Rainbow House kids.</p>
   </div>
 
-  <div class="Rainbow">
+  <div class="photo2">
     <img src="pictures/Volunteering.jpg" alt="People volunteering"/>
 
-    <p class="caption">People volunteering.</p>
+    <p class="caption2">People volunteering.</p>
   </div>
 
 
-  <div class="Rainbow">
+  <div class="photo3">
     <img src="pictures/kids2.png" alt="More kids"/>
 
-    <p class="caption">Kids at Rainbow House.</p>
+    <p class="caption3">Kids at Rainbow House.</p>
   </div>
 
-  <div class="Rainbow">
+  <div class="photo4">
     <img src="pictures/Reading.jpg" alt="Reading"/>
 
-    <p class="caption">Reading to kids.</p>
+    <p class="caption4">Reading to kids.</p>
   </div>
 
 </div>
