--- a/home.html
+++ b/home.html
@@ -15,8 +15,13 @@
 
   <body>
 
+    <div class="topnav">
+      <input type="text" placeholder="Search..">
+    </div>
+
 <!--This is a comment. It won't show up in your browser, only in the page source-->
   <h1>PRI-MO Events Agency</h1>
+
 
 
   <ul id="nav">
