--- a/rainbow.html
+++ b/rainbow.html
@@ -35,7 +35,7 @@
   <div id="work-container">
   <div class="intro">
   <p> This is what we did for the Rainbow House. More Filler text. kjflsjfos didjfsojf skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. asjkdosj fisfsij fskl.
-  kljlkjf osijf soijf afjsdkaf. fasj ieww fajfie fsjfow. ajfiewf. esajio few</p>
+  kljlkjf osijf soijf afjsdkaf. fasj ieww fajfie fsjfow. ajfiewf. esajio few. </p>
 </div>
 
     <div class="video1">
