--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 
 </body>
 
-<h1>Testing, testing</h1>
+<!-- <h1>Testing, testing</h1> -->
 
 <div class="video">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/-I65g0K2_Bo?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
