grid on join our team

--- a/join.html
+++ b/join.html
@@ -43,6 +43,7 @@
 
   <p> <span class= "meet"> Meet the Students      </span> </p>
 
+  <div id="work-container">
   <div class="students">
     <img src="pictures/boy1.jpg" alt="A picture of Rey"/>
 
@@ -73,6 +74,7 @@
 
     <p class="caption">Olivia is a key contributor.</p>
   </div>
+</div>
 
 </body>
 
