--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
     blah blah...enter your name in below and we'll get back to you. </p>
 
 <ul id="contact">
-  <li> <a href="mailto:forrestmd@missouri.edu"> forrestmd@missouri.edu </a>
+  <li> E: <a href="mailto:forrestmd@missouri.edu"> forrestmd@missouri.edu </a>
   </li>
-  <li> 847-826-3045 </li>
+  <li> P: 847-826-3045 </li>
   <li> <a href="https://github.com/j4502-ss18/class/wiki/Syllabus"> @alyssaweisberg5 </a>
   </li>
 </ul>
