just adding random text idk

--- a/join.html
+++ b/join.html
@@ -35,10 +35,10 @@
   <p> <span class= "howto"> How to Register </span> </p>
 
   <ul id="howto">
-    <li> anvj anv jnvs nvsn sadn ksdnv anvj anv jnvs nvsn sadn ksdnv </li>
-    <li> anvj anv jnvs nvsn sadn ksdnv anvj anv jnvs nvsn sadn ksdnv </li>
-    <li> anvj anv jnvs nvsn sadn ksdnv anvj anv jnvs nvsn sadn ksdnv </li>
-    <li> anvj anv jnvs nvsn sadn ksdnv anvj anv jnvs nvsn sadn ksdnv </li>
+    <li> 1. Visit MU Strat Comm page to learn more about prerequisites for this course. </li>
+    <li> 2. Email Melanie Forrest to receive a permission number.  </li>
+    <li> 3. Enroll in J4672 on myZou. </li>
+    <li> 4. Be prepared for the best class of ur lyfe. </li>
   </ul>
 
   <p> <span class= "meet"> Meet the Students      </span> </p>
