--- a/rainbow.html
+++ b/rainbow.html
@@ -16,6 +16,11 @@
 
   <h2>PRI-MO Events Agency</h2>
 
+
+  <div class="search">
+    <input type="text" placeholder="Search..">
+  </div>
+
       <ul id="nav">
     <li><a href="home.html">Home</a></li>
     <li><a href="spirit76.html">Our Work</a></li>
