--- a/spirit76.html
+++ b/spirit76.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,700,900" rel="stylesheet">
   </head>
 
+
 <body
 </body>
 
@@ -19,6 +20,10 @@
 
 <!--This is a comment. It won't show up in your browser, only in the page source-->
   <h2>PRI-MO Events Agency</h2>
+
+  <div class="search">
+    <input type="text" placeholder="Search..">
+  </div>
 
       <ul id="nav">
     <li><a href="home.html">Home</a></li>
