--- a/join.html
+++ b/join.html
@@ -18,6 +18,10 @@
 <!--This is a comment. It won't show up in your browser, only in the page source-->
   <h2>PRI-MO Events Agency</h2>
 
+  <div class="search">
+    <input type="text" placeholder="Search..">
+  </div>
+  
       <ul id="nav">
     <li><a href="home.html">Home</a></li>
     <li><a href="spirit76.html">Our Work</a></li>
