Added hamburgers to rest of pages

--- a/join.html
+++ b/join.html
@@ -12,6 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,700,900" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <script src="finished.js" type="text/javascript"></script>
   </head>
 
 
@@ -21,14 +23,16 @@
   <div class="search">
     <input type="text" placeholder="Search..">
   </div>
-  
+
+  <nav>
+    <a class=" menu-trigger" href="#">&#9776;</a>
       <ul id="nav">
     <li><a href="home.html">Home</a></li>
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-
+</nav>
   <h3>Join Our Team</h1>
 
   <!-- <p>Here is a <a href="https://www.apple.com">link to the Apple website, neato.</a></p>
