--- a/ourwork.html
+++ b/ourwork.html
@@ -10,6 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,700,900" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <script src="finished.js" type="text/javascript"></script>
   </head>
 
 <body
@@ -22,14 +24,15 @@
 <!--This is a comment. It won't show up in your browser, only in the page source-->
   <h2>PRI-MO Events Agency</h2>
 
-
+  <nav>
+    <a class=" menu-trigger" href="#">&#9776;</a>
       <ul id="nav">
     <li><a href="home.html">Home</a></li>
     <li><a href="ourwork.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-
+</nav>
   <h3>Our Work</h3>
 
   <ul id="nav2">
