grid on home page tbd

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 </body>
 
 <!-- <h1>Testing, testing</h1> -->
-
+<div id="home-container">
 <div class="video">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/-I65g0K2_Bo?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
@@ -42,6 +42,7 @@
 <body
   <div id="container">
   <p> <span class= "bold"> Services </span> </p>
+    <span class="services">
     <p> There are four categories for every project. We do production (budget, AE, management), client services,
       strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
       entertainment (vendors, catering, music, games, auction).  There are four categories for every project. We do production (budget, AE, management), client services,
@@ -52,7 +53,9 @@
             strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
             entertainment (vendors, catering, music, games, auction).
     </p>
+  </span> 
   </div>
+</div>
 </body>
 
 <footer>
