starting to input content...still working on video issue

--- a/home.html
+++ b/home.html
@@ -59,14 +59,14 @@
             strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
             entertainment (vendors, catering, music, games, auction).
     </p>
-  </span> 
+  </span>
   </div>
 </div>
 </body>
 
 <footer>
-    <p> forrestmd@missouri.edu </p>
-    <p>Content copyright &copy; 2018, PRI-MO Events Agency</p>
+  <p>Content  &copy; 2018, PRI-MO Events Agency</p>
+    <p> Contact: <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a>.<br>  </p>
 </footer>
 
 
