--- a/join.html
+++ b/join.html
@@ -43,10 +43,10 @@
   <p> <span class= "howto"> How to Register </span> </p>
 
   <ul id="howto">
-    <li> 1. Visit MU Strat Comm page to learn more about prerequisites for this course. </li>
-    <li> 2. Email Melanie Forrest to receive a permission number.  </li>
-    <li> 3. Enroll in J4672 on myZou. </li>
-    <li> 4. Be prepared for the best class of ur lyfe. </li>
+    <li> Visit <a href="http://stratcomm.missouri.edu/"> MU Strat Comm</a> page to learn more about prerequisites for this course. </li>
+    <li> Email <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a> to receive a permission number.  </li>
+    <li> Enroll in J4672 on myZou. </li>
+    <li> Final steps go here...lorem ipsum lorem ipsum </li>
   </ul>
 
   <p> <span class= "meet"> Meet the Students      </span> </p>
@@ -88,8 +88,8 @@
 
 
 <footer>
-    <p> forrestmd@missouri.edu </p>
-    <p>Content copyright &copy; 2018, PRI-MO Events Agency</p>
+    <p>Content &copy; 2018, PRI-MO Events Agency</p>
+      <p> Contact: <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a>.<br>  </p>
 </footer>
 
 
