--- a/rainbow.html
+++ b/rainbow.html
@@ -43,8 +43,10 @@
 
   <div id="work-container">
   <div class="intro">
-  <p> This is what we did for the Rainbow House. More Filler text. kjflsjfos didjfsojf skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. asjkdosj fisfsij fskl.
-  kljlkjf osijf soijf afjsdkaf. fasj ieww fajfie fsjfow. ajfiewf. esajio few. </p>
+  <p> <span class= "bold2"> Event Name: </span> Rainbow House Masquerade Ball </p>
+  <p> <span class= "bold2"> Event Info: </span> Our Rainbow House Masquerade Ball is our biggest and most important fundraiser. We hold it each year in April in honor of April being Child Abuse Awareness month. The funds raised from the Gala support Rainbow House by helping to provide food, clothing, bedding and more for the children that stay here through out the year. This year's theme is "NASCAR." </p>
+  <p> <span class= "bold2"> PRI-MO Goals: </span> Our goal for this project was to complete a lorem ipsum dolor est, quod nihil... </p>
+
 </div>
 
     <div class="video1">
@@ -86,8 +88,8 @@
   </body>
 
   <footer>
-      <p> forrestmd@missouri.edu </p>
-      <p>Content copyright &copy; 2018, PRI-MO Events Agency</p>
+    <p>Content &copy; 2018, PRI-MO Events Agency</p>
+      <p> Contact: <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a>.<br>  </p>
   </footer>
 
   </html>
