--- a/spirit76.html
+++ b/spirit76.html
@@ -48,9 +48,9 @@
 
   <div id="work-container">
   <div class="intro">
-  <p> This is what did for the Spirit of 76 Fireworks. More Filler text. This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.
-
-  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text.  This is what did for the Spirit of 76 Fireworks. More Filler text. </p>
+  <p> <span class= "bold2"> Event Name: </span> Spirit of 76 Fireworks </p>
+  <p> <span class= "bold2"> Event Info: </span> The event itself was for all of their national clients to attend in appreciation for their business and to also showcase their fireworks products for summer orders.  Their clients own firework stands throughout the country and attend this social to view product, socialize and talk with Spirit of 76. </p>
+  <p> <span class= "bold2"> PRI-MO Goals: </span> Our goal for this project was to complete a lorem ipsum dolor est, quod nihil... </p>
   </div>
 
   <div class="video1">
@@ -91,8 +91,8 @@
 </body>
 
 <footer>
-    <p> forrestmd@missouri.edu </p>
-    <p>Content copyright &copy; 2018, PRI-MO Events Agency</p>
+  <p>Content &copy; 2018, PRI-MO Events Agency</p>
+    <p> Contact: <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a>.<br>  </p>
 </footer>
 
 </html>
