--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
 </body>
 
 <footer>
-    <p> forrestmd@missouri.edu </p>
-    <p>Content copyright &copy; 2018, PRI-MO Events Agency</p>
+  <p>Content &copy; 2018, PRI-MO Events Agency</p>
+    <p> Contact: <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a>.<br>  </p>
 </footer>
 
 </html>
