Created some notes

--- a/spirit76.html
+++ b/spirit76.html
@@ -16,9 +16,6 @@
   </head>
 
 
-<body
-</body>
-
   <body>
 
 <!--This is a comment. It won't show up in your browser, only in the page source-->
@@ -53,10 +50,12 @@
   <p> <span class= "bold2"> PRI-MO Goals: </span> Our goal for this project was to complete a lorem ipsum dolor est, quod nihil... </p>
   </div>
 
-  <div class="video1">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ICpXwYMZRo0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-    </iframe>
-  </div>
+  <div class="test_76">
+    <div class="video1">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ICpXwYMZRo0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+      </iframe>
+    </div>
+  </div><!-- close video test div  -->
 
 <div class="below">
   <p> Below are photos of our events... More Filler text. kjflsjfos didjfsojf
