--- a/spirit76.html
+++ b/spirit76.html
@@ -63,22 +63,22 @@
 </div>
 
 <div class="photo1">
-  <img src="pictures/fireworks5.jpg" alt="People looking at Fireworks"/>
+  <img src="SOF_Photos/spirit_logo.jpg" alt="Spirit of Fireworks logo"/>
 
-  <p class="caption1">People looking at Fireworks.</p>
+  <p class="caption1">Spirit of Fireworks logo.</p>
 </div>
 
 <div class="photo2">
-  <img src="pictures/Fireworks2.jpg" alt="More Fireworks"/>
+  <img src="SOF_Photos/Event.jpg" alt="Event"/>
 
-  <p class="caption2">More Fireworks.</p>
+  <p class="caption2">People come together to celebrate at the Spirit of Fireworks event.</p>
 </div>
 
 
 <div class="photo3">
-  <img src="pictures/Fireworks3.jpg" alt="Big Fireworks"/>
+  <img src="SOF_Photos/Students.jpg" alt="Big Fireworks"/>
 
-  <p class="caption3">Big Fireworks.</p>
+  <p class="caption3">University of Missouri Journalism students set up for the event.</p>
 </div>
 
 <div class="photo4">
