Fixed hover color

--- a/spirit76.html
+++ b/spirit76.html
@@ -76,13 +76,13 @@
 
 
 <div class="photo3">
-  <img src="SOF_Photos/Students.jpg" alt="Big Fireworks"/>
+    <img src="SOF_Photos/popcorn.jpg" alt="popcorn"/>
 
-  <p class="caption3">University of Missouri Journalism students set up for the event.</p>
+  <p class="caption3">Popcorn was served at the event.</p>
 </div>
 
 <div class="photo4">
-  <img src="pictures/Fireworks4.png" alt="Green firework"/>
+  <img src="SOF_Photos/Boom.jpg" alt="Fireworks"/>
 
   <p class="caption4">Green Fireworks.</p>
 </div>
