search bar/ logo

--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,13 @@
   <body>
 
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-  <h2>PRI-MO Events Agency</h2>
-
-  <div class="search">
-    <input type="text" placeholder="Search..">
+<div id="logo">
+  <div class="logo1">
+    <img src="pictures/PRI-MO-Events-Logo.png" alt="The Logo"/>
   </div>
+</div>
+
+
 <nav>
   <a class=" menu-trigger" href="#">&#9776;</a>
       <ul id="nav">
@@ -30,6 +32,9 @@
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
+    <li><div class="search">
+      <input type="text" placeholder="Search.."></li>
+    </div>
   </ul>
 </nav>
   <h3>Contact</h3>
