--- a/rainbow.html
+++ b/rainbow.html
@@ -16,12 +16,12 @@
 
   <body>
 
-  <h2>PRI-MO Events Agency</h2>
+    <div id="logo">
+      <div class="logo1">
+        <img src="pictures/PRI-MO-Events-Logo.png" alt="The Logo"/>
+      </div>
+    </div>
 
-
-  <div class="search">
-    <input type="text" placeholder="Search..">
-  </div>
 
   <nav>
     <a class=" menu-trigger" href="#">&#9776;</a>
@@ -30,6 +30,9 @@
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
+    <li><div class="search">
+      <input type="text" placeholder="Search.."></li>
+    </div>
   </ul>
 </nav>
     <h4>Our Work</h4>
@@ -79,7 +82,6 @@
 
   <div class="photo4">
     <img src="pictures/Reading.jpg" alt="Reading"/>
-
     <p class="caption4">Reading to kids.</p>
   </div>
 
