--- a/home.html
+++ b/home.html
@@ -18,13 +18,17 @@
   <body>
 
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-  <h1>PRI-MO Events Agency</h1>
+  <!-- <h1>PRI-MO Events Agency</h1> -->
 
-  <div class="search">
-    <input type="text" placeholder="Search..">
+<div id="logo">
+  <div class="logo1">
+    <img src="pictures/PRI-MO-Events-Logo.png" alt="The Logo"/>
   </div>
+</div>
 
-
+<div class="search1">
+  <input type="text" placeholder="Search.."></li>
+</div>
 
 <nav>
   <a class=" menu-trigger" href="#">&#9776;</a>
@@ -33,6 +37,9 @@
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
+    <li><div class="search">
+      <input type="text" placeholder="Search.."></li>
+    </div>
   </ul>
 </nav>
 
