--- a/spirit76.html
+++ b/spirit76.html
@@ -62,6 +62,10 @@
     skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. </p>
 </div>
 
+<div class="slideshow-container">
+
+
+</div>
 <div class="photo1">
   <img src="SOF_Photos/spirit_logo.jpg" alt="Spirit of Fireworks logo"/>
 
