--- a/spirit76.html
+++ b/spirit76.html
@@ -19,12 +19,11 @@
   <body>
 
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-<div id="logo">
-  <div class="logo1">
-    <img src="pictures/PRI-MO-Events-Logo.png" alt="The Logo"/>
-  </div>
-</div>
+  <h2>PRI-MO Events Agency</h2>
 
+  <div class="search">
+    <input type="text" placeholder="Search..">
+  </div>
 
   <nav>
     <a class=" menu-trigger" href="#">&#9776;</a>
@@ -33,9 +32,6 @@
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><div class="search">
-      <input type="text" placeholder="Search.."></li>
-    </div>
   </ul>
 </nav>
     <h4>Our Work</h4>
@@ -66,9 +62,6 @@
     skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. </p>
 </div>
 
-<div class="slideshow-container">
-
-
 </div>
 <div class="photo1">
   <img src="SOF_Photos/spirit_logo.jpg" alt="Spirit of Fireworks logo"/>
@@ -85,6 +78,7 @@
 
 <div class="photo3">
     <img src="SOF_Photos/popcorn.jpg" alt="popcorn"/>
+
   <p class="caption3">Popcorn was served at the event.</p>
 </div>
 
