--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,9 @@
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <div id="logo">
   <div class="logo1">
-    <img src="pictures/PRI-MO-Events-Logo.png" alt="The Logo"/>
+    <a href="home.html"><img src="pictures/PRI-MO-Events-Logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
 </div>
-
 
 <nav>
   <a class=" menu-trigger" href="#">&#9776;</a>
