--- a/spirit76.html
+++ b/spirit76.html
@@ -21,7 +21,7 @@
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <div id="logo">
   <div class="logo1">
-    <img src="pictures/PRI-MO-Events-Logo.png" alt="The Logo"/>
+    <a href="home.html"><img src="pictures/PRI-MO-Events-Logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
 </div>
 
