--- a/rainbow.html
+++ b/rainbow.html
@@ -15,10 +15,10 @@
   </head>
 
   <body>
-    
+
     <div id="logo">
       <div class="logo1">
-        <a href="home.html"><img src="pictures/PRI-MO-Events-Logo.png" alt="Pri-Mo Events Agency"></a>
+        <a href="home.html"><img src="logo.png" alt="Pri-Mo Events Agency"></a>
       </div>
     </div>
 
