--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <div id="logo">
   <div class="logo1">
-    <a href="home.html"><img src="pictures/PRI-MO-Events-Logo.png" alt="Pri-Mo Events Agency"></a>
+    <a href="home.html"><img src="logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
 </div>
 
