--- a/ourwork.html
+++ b/ourwork.html
@@ -20,10 +20,9 @@
   <body>
 
 
-
     <div id="logo">
       <div class="logo1">
-        <a href="home.html"><img src="pictures/PRI-MO-Events-Logo.png" alt="Pri-Mo Events Agency"></a>
+        <a href="home.html"><img src="logo.png" alt="Pri-Mo Events Agency"></a>
       </div>
     </div>
 
