--- a/home.html
+++ b/home.html
@@ -17,11 +17,15 @@
 
 <body>
 
+<!--This is a comment. It won't show up in your browser, only in the page source-->
+
+  <h1>PRI-MO Events Agency</h1>
+  <a href="home.html"><img src="/whatever.png" alt="Pri-Mo Events Agency"></a><!-- sample code for linking logo  -->
 
 
 <div id="logo">
   <div class="logo1">
-    <a href="home.html"><img src="logo.png" alt="Pri-Mo Events Agency"></a>
+    <img src="pictures/PRI-MO-Events-Logo.png" alt="The Logo"/>
   </div>
 </div>
 
