--- a/home.html
+++ b/home.html
@@ -19,15 +19,13 @@
 
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 
-  <h1>PRI-MO Events Agency</h1>
-  <a href="home.html"><img src="/whatever.png" alt="Pri-Mo Events Agency"></a><!-- sample code for linking logo  -->
-
 
 <div id="logo">
   <div class="logo1">
-    <img src="pictures/PRI-MO-Events-Logo.png" alt="The Logo"/>
+    <a href="home.html"><img src="logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
 </div>
+
 
 <div class="search1">
   <input type="text" placeholder="Search.."></li>
