--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 <nav>
   <a class=" menu-trigger" href="#">&#9776;</a>
   <ul id="nav">
-    <li><a href="home.html">Home</a></li>
+    <li><a href="home.html">Services</a></li>
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
@@ -44,7 +44,7 @@
   </ul>
 </nav>
 
-<!-- <h1>Testing, testing</h1> -->
+
 <div id="home-container"><!-- this is where Grid is set  -->
   <div class="test_video">    <!-- this is the direct child of home-container -->
     <div class="video">
