--- a/spirit76.html
+++ b/spirit76.html
@@ -34,7 +34,7 @@
   <nav>
     <a class=" menu-trigger" href="#">&#9776;</a>
       <ul id="nav">
-    <li><a href="home.html">Home</a></li>
+    <li><a href="home.html">Services</a></li>
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
