--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,13 @@
     <a href="home.html"><img src="logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
 </div>
+<div class="search1">
+  <input type="text" placeholder="Search.."></li>
+</div>
 
 <nav>
   <a class=" menu-trigger" href="#">&#9776;</a>
-      <ul id="nav">
+  <ul id="nav">
     <li><a href="home.html">Services</a></li>
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
@@ -36,6 +39,7 @@
     </div>
   </ul>
 </nav>
+
   <h3>Contact</h3>
 
     <p> We'd love to work with you! Whether you have an event that needs hosting...blah
