--- a/join.html
+++ b/join.html
@@ -25,10 +25,13 @@
 </div>
 
 
+<div class="search1">
+  <input type="text" placeholder="Search.."></li>
+</div>
 
-  <nav>
-    <a class=" menu-trigger" href="#">&#9776;</a>
-      <ul id="nav">
+<nav>
+  <a class=" menu-trigger" href="#">&#9776;</a>
+  <ul id="nav">
     <li><a href="home.html">Services</a></li>
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
@@ -38,6 +41,7 @@
     </div>
   </ul>
 </nav>
+
   <h3>Join Our Team</h1>
 
   <!-- <p>Here is a <a href="https://www.apple.com">link to the Apple website, neato.</a></p>
@@ -67,12 +71,6 @@
     <img src="pictures/boy2.jpg" alt="A picture of Rob"/>
 
     <p class="caption">Rob is a key contributor.</p>
-  </div>
-
-  <div class="Students">
-    <img src="pictures/boy3.jpg" alt="A picture of Jake"/>
-
-    <p class="caption">Jake is a key contributor.</p>
   </div>
 
 
