--- a/ourwork.html
+++ b/ourwork.html
@@ -14,11 +14,7 @@
       <script src="finished.js" type="text/javascript"></script>
   </head>
 
-<body
-</body>
-
   <body>
-
 
     <div id="logo">
       <div class="logo1">
@@ -26,29 +22,37 @@
       </div>
     </div>
 
-  <nav>
-    <a class=" menu-trigger" href="#">&#9776;</a>
-      <ul id="nav">
-    <li><a href="home.html">Services</a></li>
-    <li><a href="ourwork.html">Our Work</a></li>
-    <li><a href="join.html">Join Our Team</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><div class="search">
+    <div class="search1">
       <input type="text" placeholder="Search.."></li>
     </div>
-  </ul>
-</nav>
-  <h3>Our Work</h3>
 
+    <nav>
+      <a class=" menu-trigger" href="#">&#9776;</a>
+      <ul id="nav">
+        <li><a href="home.html">Services</a></li>
+        <li><a href="spirit76.html">Our Work</a></li>
+        <li><a href="join.html">Join Our Team</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><div class="search">
+          <input type="text" placeholder="Search.."></li>
+        </div>
+      </ul>
+    </nav>
+
+
+<div id="grid4work">
+  <div class="trigger">
+    <h3>Our Work</h3>
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
     <li><a href="rainbow.html">Rainbow House</a></li>
   </ul>
+  </div>
 
   <p>Here is where we will put our work</a></p>
 
   <!-- <img src="lime-cat.jpg" alt="A cat with a lime on its head" width="300px" /></a> -->
-
+</div>
 </body>
 
 
