--- a/rainbow.html
+++ b/rainbow.html
@@ -22,25 +22,33 @@
       </div>
     </div>
 
-
-  <nav>
-    <a class=" menu-trigger" href="#">&#9776;</a>
-      <ul id="nav">
-    <li><a href="home.html">Services</a></li>
-    <li><a href="spirit76.html">Our Work</a></li>
-    <li><a href="join.html">Join Our Team</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><div class="search">
+    <div class="search1">
       <input type="text" placeholder="Search.."></li>
     </div>
-  </ul>
-</nav>
-    <h4>Our Work</h4>
 
+    <nav>
+      <a class=" menu-trigger" href="#">&#9776;</a>
+      <ul id="nav">
+        <li><a href="home.html">Services</a></li>
+        <li><a href="spirit76.html">Our Work</a></li>
+        <li><a href="join.html">Join Our Team</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><div class="search">
+          <input type="text" placeholder="Search.."></li>
+        </div>
+      </ul>
+    </nav>
+
+
+
+  <div id="grid4work">
+  <div class="trigger">
+      <h4>Our Work</h4>
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
     <li><a href="rainbow.html">Rainbow House</a></li>
   </ul>
+</div>
 
   <h3>Rainbow House</h3>
 
@@ -86,7 +94,7 @@
   </div>
 
 </div>
-
+</div>
   </body>
 
   <footer>
