--- a/spirit76.html
+++ b/spirit76.html
@@ -27,34 +27,44 @@
   </div>
 </div>
 
-  <div class="search">
-    <input type="text" placeholder="Search..">
-  </div>
+<div class="search1">
+  <input type="text" placeholder="Search.."></li>
+</div>
 
-  <nav>
-    <a class=" menu-trigger" href="#">&#9776;</a>
-      <ul id="nav">
+<nav>
+  <a class=" menu-trigger" href="#">&#9776;</a>
+  <ul id="nav">
     <li><a href="home.html">Services</a></li>
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
+    <li><div class="search">
+      <input type="text" placeholder="Search.."></li>
+    </div>
   </ul>
 </nav>
-    <h4>Our Work</h4>
 
+
+</nav>
+
+
+    <div id="grid4work">
+
+      <div class="trigger">
+        <h4>Our Work</h4>
   <ul id="nav2">
     <li><a href="spirit76.html">Spirit of 76 Fireworks</a></li>
     <li><a href="rainbow.html">Rainbow House</a></li>
   </ul>
+</div>
 
-  <h3>Spirit of 76 Fireworks</h3>
+  <h3 class="intro">Spirit of 76 Fireworks</h3>
 
   <div id="work-container">
-  <div class="intro">
-  <p> <span class= "bold2"> Event Name: </span> Spirit of 76 Fireworks </p>
-  <p> <span class= "bold2"> Event Info: </span> The event itself was for all of their national clients to attend in appreciation for their business and to also showcase their fireworks products for summer orders.  Their clients own firework stands throughout the country and attend this social to view product, socialize and talk with Spirit of 76. </p>
-  <p> <span class= "bold2"> PRI-MO Goals: </span> Our goal for this project was to complete a lorem ipsum dolor est, quod nihil... </p>
+  <p class="part1"> <span class= "bold2"> Event Info: </span> The event itself was for all of their national clients to attend in appreciation for their business and to also showcase their fireworks products for summer orders.  Their clients own firework stands throughout the country and attend this social to view product, socialize and talk with Spirit of 76. </p>
+  <p class="part2"> <span class= "bold2"> PRI-MO Goals: </span> Our goal for this project was to complete a lorem ipsum dolor est, quod nihil... </p>
   </div>
+
 
   <div class="test_76">
     <div class="video1">
@@ -63,11 +73,60 @@
     </div>
   </div><!-- close video test div  -->
 
-<div class="below">
-  <p> Below are photos of our events... More Filler text. kjflsjfos didjfsojf
-    skfl sjfslf.fjdslkjfslfj ksljfslkjflsj. </p>
 </div>
 
+
+<!-- ffffffffffffffffffffffffffffffffffffffffffff -->
+
+
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 4</div>
+    <img src="SOF_Photos/spirit_logo.jpg" style="width:100%">
+    <div class="text">Spirit of Fireworks logo</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 4</div>
+    <img src="SOF_Photos/Event.jpg" style="width:100%">
+    <div class="text">People come together to celebrate at the Spirit of Fireworks event.</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 4</div>
+    <img src="SOF_Photos/popcorn.jpg" style="width:100%">
+    <div class="text">Popcorn was served at the event.</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 4</div>
+    <img src="SOF_Photos/Boom.jpg" style="width:100%">
+    <div class="text">Green Fireworks.</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+</div>
+
+
+
+
+<!-- ffffffffffffffffffffffffffffffffffffffffffff -->
+
+
+<!-- 
 
 <div class="photo1">
   <img src="SOF_Photos/spirit_logo.jpg" alt="Spirit of Fireworks logo"/>
@@ -90,10 +149,10 @@
 
 <div class="photo4">
   <img src="SOF_Photos/Boom.jpg" alt="Fireworks"/>
-
   <p class="caption4">Green Fireworks.</p>
-</div>
-</div>
+</div> -->
+
+
 </body>
 
 <footer>
