--- a/spirit76.html
+++ b/spirit76.html
@@ -23,7 +23,7 @@
 
 <div id="logo">
   <div class="logo1">
-    <a href="home.html"><img src="logo.png" alt="Pri-Mo Events Agency"></a>
+    <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
 </div>
 
