--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
 <div id="logo">
   <div class="logo2">
-    <a href="home.html"><img src="logo.png" alt="Pri-Mo Events Agency"></a>
+    <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
 </div>
 
