changed info on 76

--- a/spirit76.html
+++ b/spirit76.html
@@ -58,7 +58,7 @@
 
   <div id="work-container">
   <p class="part1"> <span class= "bold2"> Event Info: </span> The event itself was for all of their national clients to attend in appreciation for their business and to also showcase their fireworks products for summer orders.  Their clients own firework stands throughout the country and attend this social to view product, socialize and talk with Spirit of 76. </p>
-  <p class="part2"> <span class= "bold2"> PRI-MO Goals: </span> Our goal for this project was to complete a lorem ipsum dolor est, quod nihil... </p>
+  <p class="part2"> For more information, please visit the <a href="https://www.76fireworks.com/">Spirit of 76 Fireworks website.</a> </p>
   </div>
 
 
