Added container, made some other changes

--- a/spirit76.html
+++ b/spirit76.html
@@ -68,6 +68,7 @@
       </iframe>
     </div>
   </div><!-- close video test div  -->
+</div><!-- close grid4work -->
 
 
 
@@ -93,7 +94,6 @@
 <div class="photo4">
   <img src="SOF_Photos/Boom.jpg" alt="Fireworks"/>
   <p class="caption4">Green Fireworks.</p>
-</div>
 </div>
 
 
