--- a/home.html
+++ b/home.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 
   <head>
   	<title>	PRI-MO Events Agency </title>
@@ -19,7 +18,7 @@
 
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 
-
+<div id="container">
 <div id="logo">
   <div class="logo2">
     <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
@@ -27,9 +26,9 @@
 </div>
 
 
-<div class="search1">
+<!-- <div class="search1">
   <input type="text" placeholder="Search.."></li>
-</div>
+</div> -->
 
 <nav>
   <a class="menu-trigger" href="#">&#9776;</a>
@@ -38,9 +37,7 @@
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><div class="search">
-      <input type="text" placeholder="Search.."></li>
-    </div>
+    <li><input type="text" placeholder="Search.."></li>
   </ul>
 </nav>
 
@@ -52,7 +49,6 @@
     </div>
   </div>
 
-  <div id="container">
   <p> <span class= "bold"> Services </span> </p>  <!-- consider making this an h1 or h2 element -->
     <div class="services">
     <p> There are four categories for every project. We do production (budget, AE, management), client services,
@@ -66,12 +62,12 @@
             entertainment (vendors, catering, music, games, auction).
     </p>
   </div>
-  </div>
 </div>
 
 <footer>
   <p>Content  &copy; 2018, PRI-MO Events Agency</p>
     <p> Contact: <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a>.<br>  </p>
 </footer>
+</div><!-- end container div   -->
 </body>
 </html>
