--- a/home.html
+++ b/home.html
@@ -38,9 +38,8 @@
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><div class="search">
-      <input type="text" placeholder="Search.."></li>
-    </div>
+    <li>
+      <input class="search" type="text" placeholder="Search.."></li>
   </ul>
 </nav>
 
