changed home page

--- a/home.html
+++ b/home.html
@@ -44,11 +44,6 @@
 
 
 <div id="home-container"><!-- this is where Grid is set  -->
-  <div class="test_video">    <!-- this is the direct child of home-container -->
-    <div class="video">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/-I65g0K2_Bo?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div>
-  </div>
 
   <p> <span class= "bold"> Services </span> </p>  <!-- consider making this an h1 or h2 element -->
     <div class="services">
@@ -60,8 +55,12 @@
           strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
           entertainment (vendors, catering, music, games, auction). There are four categories for every project. We do production (budget, AE, management), client services,
             strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
-            entertainment (vendors, catering, music, games, auction).
-    </p>
+            entertainment (vendors, catering, music, games, auction).</p>
+  </div>
+  <div class="test_video">    <!-- this is the direct child of home-container -->
+    <div class="video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/-I65g0K2_Bo?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
 
