--- a/rainbow.html
+++ b/rainbow.html
@@ -52,7 +52,7 @@
 
   <h3>Rainbow House</h3>
 
-  <div id="work-container">
+  <div id="work-container3">
   <div class="intro">
   <p> <span class= "bold2"> Event Name: </span> Rainbow House Masquerade Ball </p>
   <p> <span class= "bold2"> Event Info: </span> Our Rainbow House Masquerade Ball is our biggest and most important fundraiser. We hold it each year in April in honor of April being Child Abuse Awareness month. The funds raised from the Gala support Rainbow House by helping to provide food, clothing, bedding and more for the children that stay here through out the year. This year's theme is "NASCAR." </p>
