--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,8 @@
   </ul>
 </nav>
 
+
+<div id="container">
   <h3>Contact</h3>
 
     <p> We'd love to work with you! Whether you have an event that needs hosting...blah
@@ -60,5 +62,5 @@
   <p>Content &copy; 2018, PRI-MO Events Agency</p>
     <p> Contact: <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a>.<br>  </p>
 </footer>
-
+</div>
 </html>
