--- a/join.html
+++ b/join.html
@@ -42,6 +42,8 @@
   </ul>
 </nav>
 
+<div id="container">
+
   <h3>Join Our Team</h1>
 
   <!-- <p>Here is a <a href="https://www.apple.com">link to the Apple website, neato.</a></p>
@@ -95,5 +97,6 @@
       <p> Contact: <a href="mailto:forrestmd@missouri.edu"> Melanie Forrest</a>.<br>  </p>
 </footer>
 
+</div>
 
 </html>
