fixing search bar etc

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   </div>
 </div>
 <div class="search1">
-  <input type="text" placeholder="Search.."></li>
+  <input type="text" placeholder="Search..."></li>
 </div>
 
 <nav>
@@ -34,9 +34,9 @@
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><div class="search">
-      <input type="text" placeholder="Search.."></li>
-    </div>
+    <li>
+      <input class="search" type="text" placeholder="Search..."></li>
+
   </ul>
 </nav>
 
