--- a/rainbow.html
+++ b/rainbow.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="search1">
-      <input type="text" placeholder="Search.."></li>
+      <input type="text" placeholder="Search..."></li>
     </div>
 
     <nav>
@@ -33,15 +33,16 @@
         <li><a href="spirit76.html">Our Work</a></li>
         <li><a href="join.html">Join Our Team</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><div class="search">
-          <input type="text" placeholder="Search.."></li>
-        </div>
+        <li>
+          <input class="search" type="text" placeholder="Search..."></li>
+
       </ul>
     </nav>
 
 
 
   <div id="grid4work">
+
   <div class="trigger">
       <h4>Our Work</h4>
   <ul id="nav2">
@@ -50,24 +51,21 @@
   </ul>
 </div>
 
-  <h3>Rainbow House</h3>
+  <h3 class="intro">Rainbow House Masquerade Ball</h3>
 
   <div id="work-container3">
   <div class="intro">
-  <p> <span class= "bold2"> Event Name: </span> Rainbow House Masquerade Ball </p>
   <p> <span class= "bold2"> Event Info: </span> Our Rainbow House Masquerade Ball is our biggest and most important fundraiser. We hold it each year in April in honor of April being Child Abuse Awareness month. The funds raised from the Gala support Rainbow House by helping to provide food, clothing, bedding and more for the children that stay here through out the year. This year's theme is "NASCAR." </p>
-  <p> <span class= "bold2"> PRI-MO Goals: </span> Our goal for this project was to complete a lorem ipsum dolor est, quod nihil... </p>
-
+  <p class="part2"> For more information, please visit the <a href="https://rainbowhousecolumbia.org/events/masqueradeball.html">Rainbow House website.</a> </p>
 </div>
 
+  <div class="test_76">
     <div class="video1">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/OEC9wS6EhLc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
     </iframe>
     </div>
+  </div>
 
-<div class="below">
-<p> Below are photos of the events. More Filler text. kjflsjfos didjfsojf </p>
-</div>
 
   <div class="photo1">
     <img src="pictures/Kidsplaying1.jpg" alt="Rainbow house kids"/>
