--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li>
-      <input class="search" type="text" placeholder="Search.."></li>
+      <input class="search" type="text" placeholder="Search..."></li>
   </ul>
 </nav>
 
