--- a/join.html
+++ b/join.html
@@ -26,7 +26,7 @@
 
 
 <div class="search1">
-  <input type="text" placeholder="Search.."></li>
+  <input type="text" placeholder="Search..."></li>
 </div>
 
 <nav>
@@ -36,9 +36,9 @@
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><div class="search">
-      <input type="text" placeholder="Search.."></li>
-    </div>
+    <li>
+      <input class="search" type="text" placeholder="Search..."></li>
+
   </ul>
 </nav>
 
