fixed home page!

--- a/home.html
+++ b/home.html
@@ -19,30 +19,32 @@
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 
 
-<div id="logo">
+
   <div class="logo2">
     <a href="home.html"><img src="Logo.png" alt="Pri-Mo Events Agency"></a>
   </div>
-</div>
 
 
-<!-- <div class="search1">
-  <input type="text" placeholder="Search.."></li>
-</div> -->
 
 <nav>
-  <a class="menu-trigger" href="#">&#9776;</a>
   <ul id="nav">
     <li><a href="home.html">Services</a></li>
     <li><a href="spirit76.html">Our Work</a></li>
     <li><a href="join.html">Join Our Team</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li>
-      <input class="search" type="text" placeholder="Search..."></li>
+    <li><input class="navsearch" type="text" placeholder="Search..."></li>
   </ul>
 </nav>
 
+<div class="search1">
+  <input type="text" placeholder="Search..."></li>
+</div>
+
 <div id="container">
+
+  <!-- **this is for the whole page padding*** -->
+
+
 <div id="home-container"><!-- this is where Grid is set  -->
 
   <p> <span class= "bold"> Services </span> </p>  <!-- consider making this an h1 or h2 element -->
@@ -53,9 +55,7 @@
         strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
         entertainment (vendors, catering, music, games, auction). There are four categories for every project. We do production (budget, AE, management), client services,
           strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
-          entertainment (vendors, catering, music, games, auction). There are four categories for every project. We do production (budget, AE, management), client services,
-            strategy (digital/PR/branding or theme),  design (overall aesthetic, staging, lighting), and
-            entertainment (vendors, catering, music, games, auction).</p>
+          entertainment (vendors, catering, music, games, auction).</p>
   </div>
   <div class="test_video">    <!-- this is the direct child of home-container -->
     <div class="video">
