--- a/rainbow.html
+++ b/rainbow.html
@@ -27,18 +27,14 @@
     </div>
 
     <nav>
-      <a class=" menu-trigger" href="#">&#9776;</a>
       <ul id="nav">
         <li><a href="home.html">Services</a></li>
         <li><a href="spirit76.html">Our Work</a></li>
         <li><a href="join.html">Join Our Team</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li>
-          <input class="search" type="text" placeholder="Search..."></li>
-
+        <li><input class="search" type="text" placeholder="Search..."></li>
       </ul>
     </nav>
-
 
 
   <div id="grid4work">
@@ -53,9 +49,9 @@
 
   <h3 class="intro">Rainbow House Masquerade Ball</h3>
 
-  <div id="work-container3">
-  <div class="intro">
-  <p> <span class= "bold2"> Event Info: </span> Our Rainbow House Masquerade Ball is our biggest and most important fundraiser. We hold it each year in April in honor of April being Child Abuse Awareness month. The funds raised from the Gala support Rainbow House by helping to provide food, clothing, bedding and more for the children that stay here through out the year. This year's theme is "NASCAR." </p>
+
+<div id="work-container">
+  <p class="part1"> <span class= "bold2"> Event Info: </span> Our Rainbow House Masquerade Ball is our biggest and most important fundraiser. We hold it each year in April in honor of April being Child Abuse Awareness month. The funds raised from the Gala support Rainbow House by helping to provide food, clothing, bedding and more for the children that stay here through out the year. This year's theme is "NASCAR." </p>
   <p class="part2"> For more information, please visit the <a href="https://rainbowhousecolumbia.org/events/masqueradeball.html">Rainbow House website.</a> </p>
 </div>
 
@@ -66,6 +62,9 @@
     </div>
   </div>
 
+</div>
+
+<div id="grid4work2">
 
   <div class="photo1">
     <img src="pictures/Kidsplaying1.jpg" alt="Rainbow house kids"/>
@@ -92,8 +91,9 @@
   </div>
 
 </div>
-</div>
+
   </body>
+
 
   <footer>
     <p>Content &copy; 2018, PRI-MO Events Agency</p>
